# cookiecutter-poetry-pypackage

./: .editorconfig  .flake8  LICENSE  NOTICE  README.md  cookiecutter.json  mkdocs.yml  mypy.ini  pyproject.toml
hooks/: post_gen_project.py
tests/: test_project_creation.py
{{cookiecutter.project_slug}}/: .env_template  .flake8  .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  mkdocs.yml  pyproject.toml  pysource_template.py
{{cookiecutter.project_slug}}/.github/workflows/: code_quality_checks.yml  docs_publish.yml  pypi_publish.yml  test_pypi_publish.yml
{{cookiecutter.project_slug}}/docs/: glossary.md  index.md  installation.md  quickstart.md  tutorials.md
{{cookiecutter.project_slug}}/docs/about/: CONTRIBUTING.md  license.md
{{cookiecutter.project_slug}}/docs/advanced/: explanation.md
{{cookiecutter.project_slug}}/docs/dev-guide/: development.md  index.md
{{cookiecutter.project_slug}}/docs/user-guide/: howtos.md  index.md  installation.md
{{cookiecutter.project_slug}}/notebooks/exploratory/: notebook_template.ipynb
{{cookiecutter.project_slug}}/src/{{cookiecutter.project_slug}}/: __init__.py  __main__.py  cli.py  logsetup.py
{{cookiecutter.project_slug}}/tests/: __init__.py  test_{{cookiecutter.project_slug}}.py
