[tool.black]
line-length=100

[tool.poetry]
name = "cookiecutter-pypackage"
version = "0.0.0"
description = "Cookiecutter template for a Python package using Poetry, MkDocs-Material and (optional) layout for data processing."
authors = ["Sean Pepper <sean-smp4@protonmail.com>"]
license = "MIT License"
readme = "README.md"
homepage = "https://github.com/smp4/cookiecutter-poetry-pypackage"
repository = "https://github.com/smp4/cookiecutter-poetry-pypackage"
keywords = ["cookiecutter", "packaging"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
include = ["LICENSE"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
cookiecutter = "*"
pytest = "*"
pytest-cov = "*"
pytest-cookies = "*"
#invoke = "*"
flake8 = "*"
flake8-docstrings = "*"
flake8-import-order = "*"
mypy = "*"
black = "*"
mkdocs-material = "*"
bandit = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
